Fix styling issues on mobile

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -38,7 +38,6 @@ html {
 }
 
 body {
-  background-color: $color-orange-desat;
   color: $color-black;
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
