--- a/src/styles/global-classes.scss
+++ b/src/styles/global-classes.scss
@@ -52,7 +52,7 @@
   background-color: $color-purple-light;
 }
 
-.bg--white {
+.bg-white {
   background-color: $color-white;
 }
 
